# MathParser

./: .gitignore  CMakeLists.txt  Expression.hpp  Parser.hpp  README.md  Token.hpp  build.sh
headers/: Allocator.hpp  Exception.hpp  Expression.hpp  FuncTable.hpp  Lexer.hpp  MathEnv.hpp  MemoryPool.hpp  NativeFunctions.hpp  Parser.hpp  StackAllocator.hpp  Token.hpp  Value.hpp  VariableMap.hpp
interactive/: Interactive.cpp
pch/: Pch.hpp
repl/: Repl.cpp
source/: Exception.cpp  Expression.cpp  FuncTable.cpp  Lexer.cpp  MathEnv.cpp  MemoryPool.cpp  NativeFunctions.cpp  Parser.cpp  Token.cpp  Value.cpp  VariableMap.cpp
src/: Exception.cpp  Exception.hpp  Expression.cpp  Expression.hpp  Lexer.cpp  Lexer.hpp  LogicException.hpp  Main.cpp  MathEnv.cpp  MathEnv.hpp  MathParser.hpp  Parser.cpp  Parser.hpp  SyntaxException.hpp  Token.cpp  Token.hpp
tests/: Tests.cpp  tests.sh  tests.txt  testsResult.txt
